Z-index hero col-2 fix

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -99,6 +99,7 @@ header {
 /* Hero */
 .hero {
   padding-top: 0.001em;
+  z-index: -222;
   height: 100vh;
   position: relative;
   background: url(http://i.imgur.com/bTmWfSR.png);
@@ -142,7 +143,7 @@ header {
       }
     }
     .col-2 {
-      z-index: 1;
+      z-index: -1;
       margin: 0 auto;
       max-width: 50%;
       width: 50%;
